# Vulkan-C-Boilerplate

./: .gitattributes  CMakeLists.txt  LICENSE  README.md  build.bat
shaders/: compile.bat
src/: main.c  main.cpp  vulkan_pipeline_state_object.cpp  vulkan_pipeline_state_object.h  vulkan_render_model.cpp  vulkan_render_model.h  vulkan_utility.h
